--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     },
     "private": true,
     "scripts": {
-        "dev": "cross-env NODE_ENV=development nodemon -e js,json"
+        "dev": "cross-env NODE_ENV=development nodemon -q -e js,json"
     },
     "husky": {
         "hooks": {
@@ -41,11 +41,14 @@
     "dependencies": {
         "chalk": "^3.0.0",
         "cross-env": "^6.0.3",
+        "fs-extra": "^8.1.0",
         "jest": "^24.9.0",
         "koa": "^2.11.0",
         "koa-bodyparser": "^4.2.1",
+        "koa-logger": "^3.2.1",
         "koa-router": "^7.4.0",
         "lodash": "^4.17.15",
+        "log4js": "^6.1.0",
         "yargs": "^15.0.2"
     },
     "devDependencies": {
