--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
         "chalk": "^3.0.0",
         "cross-env": "^6.0.3",
         "fs-extra": "^8.1.0",
+        "inquirer": "^7.0.1",
         "jest": "^24.9.0",
         "koa": "^2.11.0",
         "koa-bodyparser": "^4.2.1",
@@ -49,6 +50,8 @@
         "koa-router": "^7.4.0",
         "lodash": "^4.17.15",
         "log4js": "^6.1.0",
+        "mongoose": "^5.8.1",
+        "require-dir": "^1.2.0",
         "yargs": "^15.0.2"
     },
     "devDependencies": {
