--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     },
     "private": true,
     "scripts": {
-        "dev": "cross-env NODE_ENV=development nodemon -q -e js,json"
+        "dev": "cross-env NODE_ENV=development nodemon",
+        "test": "cross-env NODE_ENV=test mocha",
+        "lint": "eslint -c .eslintrc --ext .js ./{src,test}/**/*.js"
     },
     "husky": {
         "hooks": {
@@ -32,12 +34,6 @@
             "git add"
         ]
     },
-    "nodemonConfig": {
-        "verbose": true,
-        "ignore": [
-            "*.test.js"
-        ]
-    },
     "dependencies": {
         "@hapi/boom": "^8.0.1",
         "@hapi/joi": "^16.1.8",
@@ -45,6 +41,7 @@
         "cross-env": "^6.0.3",
         "fs-extra": "^8.1.0",
         "inquirer": "^7.0.1",
+        "intelli-espower-loader": "^1.0.1",
         "koa": "^2.11.0",
         "koa-bodyparser": "^4.2.1",
         "koa-logger": "^3.2.1",
@@ -53,7 +50,10 @@
         "log4js": "^6.1.0",
         "mocha": "^6.2.2",
         "mongoose": "^5.8.1",
+        "nyc": "^14.1.1",
+        "power-assert": "^1.6.1",
         "require-dir": "^1.2.0",
+        "supertest": "^4.0.2",
         "yargs": "^15.0.2"
     },
     "devDependencies": {
