--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
         "chalk": "^3.0.0",
         "cron": "^1.7.2",
         "cross-env": "^6.0.3",
+        "debug": "^4.1.1",
         "fs-extra": "^8.1.0",
         "inquirer": "^7.0.1",
         "intelli-espower-loader": "^1.0.1",
