--- a/package.json
+++ b/package.json
@@ -37,8 +37,9 @@
     "dependencies": {
         "@hapi/boom": "^8.0.1",
         "@hapi/joi": "^16.1.8",
-        "@koa/cors": "2",
+        "@koa/cors": "^3.0.0",
         "@sindresorhus/is": "^1.2.0",
+        "bcrypt": "3.0.6",
         "chalk": "^3.0.0",
         "cron": "^1.7.2",
         "cross-env": "^6.0.3",
@@ -46,9 +47,11 @@
         "fs-extra": "^8.1.0",
         "inquirer": "^7.0.1",
         "intelli-espower-loader": "^1.0.1",
+        "jsonwebtoken": "^8.5.1",
         "koa": "^2.11.0",
         "koa-bodyparser": "^4.2.1",
         "koa-helmet": "^5.2.0",
+        "koa-jwt": "^3.6.0",
         "koa-logger": "^3.2.1",
         "koa-response-time": "^2.1.0",
         "koa-router": "^7.4.0",
@@ -61,9 +64,12 @@
         "nyc": "^14.1.1",
         "power-assert": "^1.6.1",
         "require-dir": "^1.2.0",
+        "rimraf": "^3.0.0",
         "sinon": "^7.5.0",
         "socket.io": "^2.3.0",
+        "superagent": "^5.1.3",
         "supertest": "^4.0.2",
+        "uuid": "^3.3.3",
         "yargs": "^15.0.2"
     },
     "devDependencies": {
