--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,7 +1,4 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
         {
@@ -15,13 +12,37 @@
             }
         },
         {
-            "name": "test",
+            "name": "test-all",
             "type": "node",
             "request": "launch",
-            "skipFiles": ["<node_internals>/**"],
-            "program": "${workspaceRoot}/node_modules/mocha/bin/mocha",
+            "program": "${workspaceFolder}/node_modules/mocha/bin/_mocha",
+            "args": ["${workspaceFolder}/test"],
+            "sourceMaps": true,
             "env": {
                 "NODE_ENV": "test"
+            }
+        },
+        {
+            "name": "test-file",
+            "type": "node",
+            "request": "launch",
+            "program": "${workspaceFolder}/node_modules/mocha/bin/_mocha",
+            "args": ["${file}"],
+            "sourceMaps": true,
+            "env": {
+                "NODE_ENV": "test"
+            }
+        },
+        {
+            "name": "test-debug",
+            "type": "node",
+            "request": "launch",
+            "program": "${workspaceFolder}/node_modules/mocha/bin/_mocha",
+            "args": ["--timeout", "999999", "${file}"],
+            "sourceMaps": true,
+            "env": {
+                "NODE_ENV": "test",
+                "VSCODE_DEBUG": "1"
             }
         }
     ]
