--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "coo-server",
+    "name": "koa-restful-boilerplate",
     "version": "1.0.0",
-    "description": "coo-server is a chat server written by koa2 and socket.io",
+    "description": "A boilerplate for koa2 RESTful API development",
     "main": "src/index.js",
     "author": {
         "name": "YuTengjing",
@@ -9,9 +9,9 @@
         "email": "ytj2713151713@gmail.com"
     },
     "license": "MIT",
-    "homepage": "https://github.com/tjx666/coo-server",
+    "homepage": "https://github.com/tjx666/koa-restful-boilerplate",
     "repository": {
-        "url": "git@github.com:tjx666/coo-server.git",
+        "url": "git@github.com:tjx666/koa-restful-boilerplate.git",
         "type": "git"
     },
     "private": true,
@@ -35,17 +35,12 @@
         ]
     },
     "dependencies": {
-        "@hapi/boom": "^8.0.1",
-        "@hapi/joi": "^16.1.8",
+        "@hapi/boom": "^9.0.0",
+        "@hapi/joi": "^17.0.2",
         "@koa/cors": "^3.0.0",
-        "@sindresorhus/is": "^1.2.0",
         "bcrypt": "3.0.6",
         "chalk": "^3.0.0",
-        "cron": "^1.7.2",
         "cross-env": "^6.0.3",
-        "debug": "^4.1.1",
-        "fs-extra": "^8.1.0",
-        "inquirer": "^7.0.1",
         "intelli-espower-loader": "^1.0.1",
         "jsonwebtoken": "^8.5.1",
         "koa": "^2.11.0",
@@ -58,27 +53,23 @@
         "lodash": "^4.17.15",
         "log-symbols": "^3.0.0",
         "log4js": "^6.1.0",
-        "mocha": "^6.2.2",
-        "mongoose": "^5.8.1",
-        "node-emoji": "^1.10.0",
-        "nyc": "^14.1.1",
+        "mocha": "^7.0.0",
+        "mongoose": "^5.8.7",
         "power-assert": "^1.6.1",
         "require-dir": "^1.2.0",
         "rimraf": "^3.0.0",
-        "sinon": "^7.5.0",
         "socket.io": "^2.3.0",
-        "superagent": "^5.1.3",
         "supertest": "^4.0.2",
-        "uuid": "^3.3.3",
+        "uuid": "^3.4.0",
         "yargs": "^15.0.2"
     },
     "devDependencies": {
         "eslint": "^6.7.2",
         "eslint-config-airbnb-base": "^14.0.0",
         "eslint-config-prettier": "^6.7.0",
-        "eslint-plugin-import": "^2.19.1",
+        "eslint-plugin-import": "^2.20.0",
         "eslint-plugin-prettier": "^3.1.2",
-        "husky": "^3.1.0",
+        "husky": "^4.0.10",
         "lint-staged": "^9.5.0",
         "nodemon": "^2.0.2",
         "prettier": "^1.19.1"
