--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "koa-restful-boilerplate",
+    "name": "coo-server",
     "version": "1.0.0",
-    "description": "A boilerplate for koa2 RESTful API development",
+    "description": "coo-server is a chat server written by koa2 and socket.io",
     "main": "src/index.js",
     "author": {
         "name": "YuTengjing",
@@ -9,16 +9,16 @@
         "email": "ytj2713151713@gmail.com"
     },
     "license": "MIT",
-    "homepage": "https://github.com/tjx666/koa-restful-boilerplate",
+    "homepage": "https://github.com/tjx666/coo-server",
     "repository": {
-        "url": "git@github.com:tjx666/koa-restful-boilerplate.git",
-        "type": "git"
+        "type": "git",
+        "url": "https://github.com/tjx666/coo-server"
     },
     "private": true,
     "scripts": {
         "dev": "cross-env NODE_ENV=development nodemon",
         "test": "cross-env NODE_ENV=test mocha",
-        "lint": "eslint -c .eslintrc --ext .js ./{src,test}/**/*.js"
+        "lint": "eslint -c .eslintrc.js --ext .js ./{src,test}/**/*.js"
     },
     "husky": {
         "hooks": {
@@ -27,11 +27,10 @@
     },
     "lint-staged": {
         "*.js": [
-            "eslint -c .eslintrc"
+            "eslint -c .eslintrc.js"
         ],
         "*.{js,json,md}": [
-            "prettier --write",
-            "git add"
+            "prettier --write"
         ]
     },
     "dependencies": {
@@ -40,7 +39,7 @@
         "@koa/cors": "^3.0.0",
         "bcrypt": "3.0.6",
         "chalk": "^3.0.0",
-        "cross-env": "^6.0.3",
+        "cross-env": "^7.0.0",
         "intelli-espower-loader": "^1.0.1",
         "jsonwebtoken": "^8.5.1",
         "koa": "^2.11.0",
@@ -49,15 +48,15 @@
         "koa-jwt": "^3.6.0",
         "koa-logger": "^3.2.1",
         "koa-response-time": "^2.1.0",
-        "koa-router": "^7.4.0",
+        "koa-router": "^8.0.6",
         "lodash": "^4.17.15",
         "log-symbols": "^3.0.0",
-        "log4js": "^6.1.0",
-        "mocha": "^7.0.0",
-        "mongoose": "^5.8.9",
+        "log4js": "^6.1.1",
+        "mocha": "^7.0.1",
+        "mongoose": "^5.8.11",
         "power-assert": "^1.6.1",
         "require-dir": "^1.2.0",
-        "rimraf": "^3.0.0",
+        "rimraf": "^3.0.1",
         "socket.io": "^2.3.0",
         "supertest": "^4.0.2",
         "uuid": "^3.4.0",
@@ -66,11 +65,10 @@
     "devDependencies": {
         "eslint": "^6.7.2",
         "eslint-config-airbnb-base": "^14.0.0",
-        "eslint-config-prettier": "^6.7.0",
-        "eslint-plugin-import": "^2.20.0",
-        "eslint-plugin-prettier": "^3.1.2",
-        "husky": "^4.0.10",
-        "lint-staged": "^10.0.1",
+        "eslint-config-prettier": "^6.10.0",
+        "eslint-plugin-import": "^2.20.1",
+        "husky": "^4.2.1",
+        "lint-staged": "^10.0.7",
         "nodemon": "^2.0.2",
         "prettier": "^1.19.1"
     }
