--- a/package.json
+++ b/package.json
@@ -43,12 +43,13 @@
         "intelli-espower-loader": "^1.0.1",
         "jsonwebtoken": "^8.5.1",
         "koa": "^2.11.0",
-        "koa-bodyparser": "^4.2.1",
+        "koa-body": "^4.1.1",
         "koa-helmet": "^5.2.0",
         "koa-jwt": "^3.6.0",
         "koa-logger": "^3.2.1",
         "koa-response-time": "^2.1.0",
         "koa-router": "^8.0.7",
+        "koa-static": "^5.0.0",
         "lodash": "^4.17.15",
         "log-symbols": "^3.0.0",
         "log4js": "^6.1.1",
@@ -56,7 +57,7 @@
         "mongoose": "^5.8.11",
         "power-assert": "^1.6.1",
         "require-dir": "^1.2.0",
-        "rimraf": "^3.0.1",
+        "rimraf": "^3.0.2",
         "socket.io": "^2.3.0",
         "supertest": "^4.0.2",
         "uuid": "^3.4.0",
