--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "scripts": {
         "start": "cross-env NODE_ENV=development nodemon",
         "test": "cross-env NODE_ENV=test mocha",
-        "lint": "eslint -c .eslintrc.js --ext .js ./{src,test}/**/*.js"
+        "lint": "eslint -c .eslintrc.js --ext .js ./{src,test}/**/*.js",
+        "clean": "npx rimraf -rf ./logs"
     },
     "husky": {
         "hooks": {
@@ -37,24 +38,27 @@
         "@hapi/boom": "^9.0.0",
         "@hapi/joi": "^17.1.0",
         "@koa/cors": "^3.0.0",
+        "@koa/multer": "^2.0.2",
+        "@koa/router": "^8.0.8",
         "bcrypt": "3.0.6",
         "chalk": "^3.0.0",
         "cross-env": "^7.0.0",
         "intelli-espower-loader": "^1.0.1",
         "jsonwebtoken": "^8.5.1",
         "koa": "^2.11.0",
-        "koa-body": "^4.1.1",
+        "koa-bodyparser": "^4.2.1",
+        "koa-compose": "^4.1.0",
         "koa-helmet": "^5.2.0",
         "koa-jwt": "^3.6.0",
         "koa-logger": "^3.2.1",
         "koa-response-time": "^2.1.0",
-        "koa-router": "^8.0.7",
         "koa-static": "^5.0.0",
         "lodash": "^4.17.15",
         "log-symbols": "^3.0.0",
         "log4js": "^6.1.1",
         "mocha": "^7.0.1",
         "mongoose": "^5.8.11",
+        "multer": "^1.4.2",
         "power-assert": "^1.6.1",
         "require-dir": "^1.2.0",
         "rimraf": "^3.0.2",
