--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     },
     "husky": {
         "hooks": {
+            "pre-commit": "lint-staged && yarn run test"
         }
     },
     "lint-staged": {
