--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
     "version": "1.0.0",
     "description": "coo-server is a chat server written by koa2 and socket.io",
     "main": "src/index.js",
+    "type": "commonjs",
+    "engines": {
+        "node": "12.16.1"
+    },
     "author": {
         "name": "YuTengjing",
         "url": "https://github.com/tjx666",
@@ -43,6 +47,7 @@
         "bcrypt": "4.0.0",
         "chalk": "^3.0.0",
         "cross-env": "^7.0.0",
+        "get-port": "^5.1.1",
         "intelli-espower-loader": "^1.0.1",
         "jsonwebtoken": "^8.5.1",
         "koa": "^2.11.0",
@@ -63,14 +68,17 @@
         "rimraf": "^3.0.2",
         "socket.io": "^2.3.0",
         "supertest": "^4.0.2",
-        "uuid": "^3.4.0",
-        "yargs": "^15.0.2"
+        "uuid": "^3.4.0"
     },
     "devDependencies": {
         "eslint": "^6.7.2",
         "eslint-config-airbnb-base": "^14.0.0",
         "eslint-config-prettier": "^6.10.0",
+        "eslint-plugin-eslint-comments": "^3.1.2",
         "eslint-plugin-import": "^2.20.1",
+        "eslint-plugin-mocha": "^6.3.0",
+        "eslint-plugin-node": "^11.0.0",
+        "eslint-plugin-promise": "^4.2.1",
         "husky": "^4.2.3",
         "lint-staged": "^10.0.7",
         "nodemon": "^2.0.2",
