--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     },
     "husky": {
         "hooks": {
-            "pre-commit": "lint-staged && yarn run test"
+            "pre-commit": "lint-staged"
         }
     },
     "lint-staged": {
