--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
         "bcrypt": "4.0.0",
         "chalk": "^3.0.0",
         "cross-env": "^7.0.0",
+        "fs-extra": "^8.1.0",
         "get-port": "^5.1.1",
         "intelli-espower-loader": "^1.0.1",
         "jsonwebtoken": "^8.5.1",
@@ -61,14 +62,14 @@
         "lodash": "^4.17.15",
         "log-symbols": "^3.0.0",
         "log4js": "^6.1.2",
-        "mocha": "^7.0.1",
-        "mongoose": "^5.9.1",
+        "mocha": "^7.1.0",
+        "mongoose": "^5.9.2",
         "multer": "^1.4.2",
         "power-assert": "^1.6.1",
         "rimraf": "^3.0.2",
         "socket.io": "^2.3.0",
         "supertest": "^4.0.2",
-        "uuid": "^3.4.0"
+        "uuid": "^7.0.1"
     },
     "devDependencies": {
         "eslint": "^6.7.2",
@@ -80,7 +81,7 @@
         "eslint-plugin-node": "^11.0.0",
         "eslint-plugin-promise": "^4.2.1",
         "husky": "^4.2.3",
-        "lint-staged": "^10.0.7",
+        "lint-staged": "^10.0.8",
         "nodemon": "^2.0.2",
         "prettier": "^1.19.1"
     }
