--- a/package.json
+++ b/package.json
@@ -72,11 +72,13 @@
         "uuid": "^7.0.1"
     },
     "devDependencies": {
+        "audit-ci": "^2.5.1",
         "eslint": "^6.7.2",
         "eslint-config-airbnb-base": "^14.0.0",
         "eslint-config-prettier": "^6.10.0",
         "eslint-plugin-eslint-comments": "^3.1.2",
         "eslint-plugin-import": "^2.20.1",
+        "eslint-plugin-jsdoc": "^21.0.0",
         "eslint-plugin-mocha": "^6.3.0",
         "eslint-plugin-node": "^11.0.0",
         "eslint-plugin-promise": "^4.2.1",
