--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
         "eslint-plugin-mocha": "^6.3.0",
         "eslint-plugin-node": "^11.0.0",
         "eslint-plugin-promise": "^4.2.1",
+        "eslint-plugin-unicorn": "^16.1.1",
         "husky": "^4.2.3",
         "lint-staged": "^10.0.8",
         "nodemon": "^2.0.2",
