:wrench: configs: set cors maxAge

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,9 +16,6 @@
     "[javascript]": {
         "editor.defaultFormatter": "esbenp.prettier-vscode"
     },
-    "[typescript]": {
-        "editor.defaultFormatter": "esbenp.prettier-vscode"
-    },
     "[json]": {
         "editor.defaultFormatter": "esbenp.prettier-vscode"
     },
@@ -26,6 +23,9 @@
         "editor.defaultFormatter": "esbenp.prettier-vscode"
     },
     "[markdown]": {
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
+    },
+    "[yaml]": {
         "editor.defaultFormatter": "esbenp.prettier-vscode"
     }
 }
