--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "src/index.js",
     "type": "commonjs",
     "engines": {
-        "node": "12.16.1"
+        "node": "12.16.3"
     },
     "author": {
         "name": "YuTengjing",
@@ -41,9 +41,9 @@
     "dependencies": {
         "@hapi/boom": "^9.1.0",
         "@hapi/joi": "^17.1.1",
-        "@koa/cors": "^3.0.0",
-        "@koa/multer": "^2.0.2",
-        "@koa/router": "^8.0.8",
+        "@koa/cors": "^3.1.0",
+        "@koa/multer": "^3.0.0",
+        "@koa/router": "8.0.8",
         "bcrypt": "4.0.1",
         "chalk": "^4.0.0",
         "cross-env": "^7.0.2",
@@ -51,40 +51,40 @@
         "get-port": "^5.1.1",
         "intelli-espower-loader": "^1.0.1",
         "jsonwebtoken": "^8.5.1",
-        "koa": "^2.11.0",
+        "koa": "^2.12.0",
         "koa-bodyparser": "^4.3.0",
         "koa-compose": "^4.1.0",
         "koa-helmet": "^5.2.0",
-        "koa-jwt": "^3.6.0",
+        "koa-jwt": "^4.0.0",
         "koa-logger": "^3.2.1",
         "koa-response-time": "^2.1.0",
         "koa-static": "^5.0.0",
         "lodash": "^4.17.15",
-        "log-symbols": "^3.0.0",
-        "log4js": "^6.1.2",
-        "mocha": "^7.1.1",
-        "mongoose": "^5.9.7",
+        "log-symbols": "^4.0.0",
+        "log4js": "^6.3.0",
+        "mocha": "^7.2.0",
+        "mongoose": "^5.9.16",
         "multer": "^1.4.2",
         "power-assert": "^1.6.1",
         "rimraf": "^3.0.2",
         "socket.io": "^2.3.0",
         "supertest": "^4.0.2",
-        "uuid": "^7.0.3"
+        "uuid": "^8.1.0"
     },
     "devDependencies": {
-        "audit-ci": "^2.5.1",
-        "eslint": "^6.7.2",
+        "audit-ci": "^3.0.1",
+        "eslint": "^7.1.0",
         "eslint-config-airbnb-base": "^14.1.0",
         "eslint-config-prettier": "^6.10.1",
-        "eslint-plugin-eslint-comments": "^3.1.2",
+        "eslint-plugin-eslint-comments": "^3.2.0",
         "eslint-plugin-import": "^2.20.2",
-        "eslint-plugin-mocha": "^6.3.0",
+        "eslint-plugin-mocha": "^7.0.0",
         "eslint-plugin-node": "^11.1.0",
         "eslint-plugin-promise": "^4.2.1",
-        "eslint-plugin-unicorn": "^18.0.1",
-        "husky": "^4.2.3",
-        "lint-staged": "^10.1.2",
-        "nodemon": "^2.0.2",
+        "eslint-plugin-unicorn": "^20.1.0",
+        "husky": "^4.2.5",
+        "lint-staged": "^10.2.6",
+        "nodemon": "^2.0.4",
         "prettier": "^2.0.4"
     }
 }
